--- a/packages/components/Flatlist/FlatList.html
+++ b/packages/components/Flatlist/FlatList.html
@@ -65,7 +65,6 @@
         intersectSelectedEvents: false,
         autoSelectOnTouch: true,
         autoShortcuts: false,
-        itemHandler: null,
         renderItem: null,
         renderTitle: null,
         dataSection: null,
@@ -82,6 +81,7 @@
       },
     },
     onupdate({changed, current}) {
+
       if(changed.data && current.data && current.data.length > 0) {
 
         if(current.data && !current.dataSection) {
@@ -102,7 +102,6 @@
         const {
           _elementsRefs,
           selectedIndex,
-          itemHandler,
           autoSelectOnTouch,
           intersectSelectedEvents: intersect,
         } = this.get();
@@ -136,7 +135,7 @@
         if(!intersect) this.fire(EVENTS.ITEM_SELECTED, eventData);
 
         if('onSelected' in data && typeof data.onSelected === 'function') {
-          return data.onSelected.apply(itemHandler, [eventData]);
+          return data.onSelected(eventData);
         }
 
         if(intersect) this.fire(EVENTS.ITEM_SELECTED, eventData);
