fix: 🐛 position index and keystroke active

--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -62,6 +62,7 @@
             <!-- Sufix decorator -->
             {#if rightLabel.sufix}
               <Decorator
+                position={position}
                 value={rightLabel.sufix}
                 style={rightLabel.sufixStyle}
               />
