--- a/packages/components/Flatlist/components/decorator.html
+++ b/packages/components/Flatlist/components/decorator.html
@@ -2,10 +2,8 @@
   <span
     style={_decoratorStyle || undefined}
   >
-    {#if typeof _decorator === 'function' && position}
+    {#if typeof _decorator === 'function'}
       {_decorator(position)}
-    {:elseif typeof _decorator === 'function'}
-      {_decorator()}
     {:else}
       {_decorator || ''}
     {/if}
