--- a/packages/components/Flatlist/example/Example.html
+++ b/packages/components/Flatlist/example/Example.html
@@ -1,4 +1,3 @@
-<h5>With Section</h5>
 <FlatList
   data={sectionList}
   renderItem={DefaultRow}
@@ -8,7 +7,7 @@
   decorator={GetDefaultDecorator}
 />
 
-<h5>With Custom row component</h5>
+<h5 style="padding: 12px;">With Custom row component</h5>
 <FlatList
   dataSection={dataList}
   renderItem={Line}
@@ -16,6 +15,11 @@
   on:itemSelected="itemSelected(event)"
 />
 
+<p style="padding: 12px;">
+  <small>
+   The highlighting may behave unexpectedly in this example, as the FlatList must not coexist with another on the same page.
+</small>
+</p>
 
 <!-- To Override default decorator props, you can pass a `decoratorOverrides` object  -->
 <!--
@@ -77,36 +81,16 @@ export default {
 
   },
   methods: {
-    getData() {
-      const data = [
-        {
-          label: {
-            value: 'Row Label 1',
-          },
-        },
-        {
-          onSelected: (itemData) => this.itemHandler(itemData),
-          label: {
-            value: 'Row Label 2',
-            description: 'Row Description',
-            style: {
-              color: Colors.purple700,
-            },
-          },
-        },
-      ];
-      return data;
-    },
     getSectionList() {
       const section = [
         {
-          title: 'Rows',
+          title: 'With Sections',
           data: [
             {
+              shortcut: 1,
               label: {
                 value: 'Row 1',
               },
-              shortcut: 1,
               onSelected: (item) => {
                 /*
                 * In this case, this anonymous function can call this script methods
@@ -118,10 +102,10 @@ export default {
               },
             },
             {
+              shortcut: 2,
               label: {
                 value: 'Row 2',
               },
-              shortcut: 2,
               /*
               * Executing a method on `onSelect`, will call the desired
               * function when the list is mounted, making it possible to return a dynamic function.
@@ -129,10 +113,10 @@ export default {
               onSelected: this.getClickHandler(),
             },
             {
+              shortcut: 3,
               label: {
                 value: 'Row 3',
               },
-              shortcut: 3,
               /*
               * Just referencing a function, The `this` will be of this script, but the `this` inside function scope, will be this object reference.
               * To refer methods of this script inside the function reference, use bind:
@@ -159,22 +143,42 @@ export default {
           title: 'Devices',
           data: [
             {
+              shortcut: 1,
               label: {
                 value: 'Device 1',
               },
-              shortcut: 1,
             },
             {
+              shortcut: 2,
               label: {
                 value: 'Device 2',
               },
-              shortcut: 2,
               onSelected: (item) => this.itemHandler(item),
             },
           ],
         },
       ];
       return section;
+    },
+    getData() {
+      const data = [
+        {
+          label: {
+            value: 'Row Label 1',
+          },
+        },
+        {
+          onSelected: (itemData) => this.itemHandler(itemData),
+          label: {
+            value: 'Row Label 2',
+            description: 'Row Description',
+            style: {
+              color: Colors.purple700,
+            },
+          },
+        },
+      ];
+      return data;
     },
     getClickHandler() {
       if(__DEV__) return (item) => {
