--- a/packages/components/Flatlist/FlatList.html
+++ b/packages/components/Flatlist/FlatList.html
@@ -1,4 +1,4 @@
-<svelte:window on:keyup="selectRowItems(event)" bind:scrollY="scrollY" />
+<svelte:window on:keydown="selectRowItems(event)" bind:scrollY="scrollY" />
 
 {#if dataSection && dataSection.length > 0}
   <div class="flatlist {className}" style={_styles} ref:flatListRef >
@@ -73,6 +73,7 @@
         selectedIndex: 0,
         className: '',
         overrideEnterKeystroke: true,
+        disableEnterKeystroke: false,
         disabled: false,
         _hasElement: false,
         _elementsRefs: [],
@@ -207,10 +208,14 @@
          *  13: 'enter'
          *
         */
-        const { _isKeystrokeActive, overrideEnterKeystroke } = this.get();
+        const {
+          _isKeystrokeActive,
+          overrideEnterKeystroke,
+          disableEnterKeystroke,
+        } = this.get();
         if(!_isKeystrokeActive) return;
 
-        if(keyCode === 13) {
+        if(keyCode === 13 && disableEnterKeystroke === false) {
           const el = document.activeElement;
           const isInputOnFocus =
             el && (el.tagName === 'INPUT' || el.tagName === 'TEXTAREA');
