--- a/packages/components/Flatlist/FlatList.html
+++ b/packages/components/Flatlist/FlatList.html
@@ -138,20 +138,7 @@
       }
     },
     methods: {
-      setSelected(parentProps, isKeystroke = false) {/*
-        if(__DEV__ || __DEBUG_LVL__ >= 2) {
-          const seen = [];
-          console.log(`setSelected(${
-            JSON.stringify(parentProps, function rep(key, val) {
-              if (typeof val === 'object') {
-                if (seen.indexOf(val) >= 0)
-                  return;
-                seen.push(val);
-              }
-              return val;
-            }, 2)
-          }),\nisKeystroke = ${isKeystroke}`);
-        } */
+      setSelected(parentProps, isKeystroke = false) {
 
         const {
           _elementsRefs,
@@ -219,7 +206,6 @@
       selectRowItems(event) {
         const { keyCode } = event;
         if(__DEV__ || __DEBUG_LVL__ >= 2) {
-          /* console.log(`selectRowItems(${JSON.stringify(event, null, 2)})`); */
           console.log(`keyCode = ${keyCode}`);
         }
 
